# dbustream

./: README.md  dbustream.cabal  stack.yaml
src/: DBus.hs  Gen.hs  Lib.hs  Series.hs  Types.hs
src/Instances/: Arbitrary.hs  Serial.hs
src/Internal/: Gen.hs
test/: Spec.hs
