name:                dbustream
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dbustream#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                       DBus
                       Gen
                       Instances.Arbitrary
                       Instances.Serial
                       Series
                       Types
  other-modules:       Internal.Gen
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , binary
                     , bytestring
                     , d-bus
                     , deriving-compat
                     , recursion-schemes
                     , smallcheck
                     , text
                     , these
                     , transformers
                     , QuickCheck
                     , quickcheck-text
  default-language:    Haskell2010
  default-extensions:  DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       LambdaCase
                       MultiParamTypeClasses
                       PatternSynonyms
                       RankNTypes
                       ScopedTypeVariables
                       TupleSections
                       TypeFamilies

executable dbustream-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dbustream
  default-language:    Haskell2010

test-suite dbustream-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , recursion-schemes
                     , smallcheck
                     , tasty
                     , tasty-hunit
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , QuickCheck
                     , dbustream
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dbustream
